# cmake_template

./: .gitignore  CMakeLists.txt  LICENSE  README.md  main.cpp
